Release for pDAQ PONY:Dartmoor